fixed ios overflow hidden not working issue

--- a/24.insect-catch-game/style.css
+++ b/24.insect-catch-game/style.css
@@ -4,8 +4,9 @@
     font-family: "Press Start 2P", sans-serif;
 }
 
+html,
 body {
-    min-height: 100vh;
+    height: 100vh;
     overflow: hidden;
     margin: 0;
     text-align: center;
